--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "description": "Boilerplate for Advanced HTML/CSS Tools UOC students",
   "scripts": {
-    "empaquetaTots":"parcel src/*.html",
     "parcel:serve": "parcel src/index.html -p 8123 --target web --open",
     "parcel:build": "parcel build src/index.html --target web --no-source-maps --no-cache",
     "clean": "rimraf dist .cache .cache-loader .parcel-cache",
-    "dev": "npm-run-all clean empaquetaTots parcel:serve",
-    "build": "npm-run-all clean empaquetaTots parcel:build",
-    "test": "echo 'Everything is working as expected ✅\nStart working on your project by running \\033[1mnpm run dev\\033[0m'"
+    "dev": "npm-run-all clean parcel:serve",
+    "build": "npm-run-all clean stylelint parcel:build",
+    "test": "echo 'Everything is working as expected ✅\nStart working on your project by running \\033[1mnpm run dev\\033[0m'",
+    "stylelint": "stylelint src/**/*.scss"
   },
   "web": "dist/index.html",
   "targets": {
@@ -42,7 +42,10 @@
     "postcss-preset-env": "^6.7.0",
     "rimraf": "^3.0.2",
     "sass": "^1.32.5",
-    "sharp": "^0.28.3"
+    "sharp": "^0.28.3",
+    "stylelint": "^13.13.1",
+    "stylelint-config-recommended-scss": "^4.3.0",
+    "stylelint-scss": "^3.21.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4"
